# Keep bazel_compatibility in sync with sonic-buildimage's .bazelversion.
module(
    name = "sai",
    bazel_compatibility = [">=8.5.1", "<=8.5.1"],
)

bazel_dep(name = "rules_perl", version = "0.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "rules_doxygen", version = "2.6.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# TODO(bazel-ready): Make tests pass
# TODO(bazel-ready): Add automatic formatting with buildfier

# rules_doxygen can pull releases from GitHub, but 1.8.16 is too old to be there.
# We need to fetch it from sourceforge.
http_archive(
    name = "doxygen_release",
    build_file_content = 'exports_files(["bin/doxygen"], ["//visibility:public"])',
    sha256 = "610697eba6104110389d371e6908ed35b4b00f9e650c969a213dc0020b067a55",
    strip_prefix = "doxygen-1.8.16",
    type = "tar.gz",
    urls = ["https://sourceforge.net/projects/doxygen/files/rel-1.8.16/doxygen-1.8.16.linux.bin.tar.gz/download"],
)

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
doxygen_extension.configuration(
    executable = "@doxygen_release//:bin/doxygen",
    platform = "linux",
)
use_repo(doxygen_extension, "doxygen")

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../../sonic-build-infra",
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "rules_distroless", version = "0.0.0")
local_path_override(
    module_name = "rules_distroless",
    path = "../../../bazel-contrib/rules_distroless",
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = [
        "bookworm",
        "bookworm-updates",
    ],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)
apt.install(
    dependency_set = "bookworm",
    packages = [
        "aspell",
        "doxygen",
        "graphviz",
    ],
    suites = [
        "bookworm",
        "bookworm-updates",
        "bookworm-security",
    ],
)
use_repo(apt, "bookworm")
