package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_headers",
    srcs = glob(["*.h"]),
)

# Export the headers as a library so that their paths are added to the compiler search path.
# This allows dependencies to include these headers as `#include <file.h>`,
# without having to figure out the path relative to where they are.
cc_library(
    name = "header_lib",
    hdrs = [":all_headers"],
    includes = ["."],
)

# Headers that will have to go into the `.deb` package.
filegroup(
    name = "deb_headers",
    srcs = glob([
        "sai*.h",
    ]),
    visibility = ["//visibility:public"],
)
