package(default_visibility = ["//visibility:public"])

load("@rules_perl//perl:perl.bzl", "perl_binary", "perl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@bazel_lib//lib:run_binary.bzl", "run_binary")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@doxygen//:doxygen.bzl", "doxygen")

# $(EXTRA) in the Makefile
filegroup(
  name = "extra",
  srcs = [
    "acronyms.txt",
    "aspell.en.pws",
  ] + glob([
    "*.pm",
    "*.cap",
  ]),
)

# $(DEPS) in the Makefile
filegroup(
  name = "deps",
  srcs = [
    "//inc:all_headers",
    "//experimental:all_headers",
  ],
)

doxygen(
  name = "doxygen",
  doxyfile_template = "Doxyfile.bazel",
  outs = [
    "xml",
  ],
  srcs = [
    ":constheaders",
    # $(DEPS)
    ":deps",
  ],
)

filegroup(
  name = "all_headers",
  srcs = glob(["*.h"]) + [":saimetadata.h"],
)

filegroup(
  name = "all_srcs",
  srcs = glob(["**/*.h", "**/*.c"]),
)

filegroup(
  name = "constheaders",
  srcs = ["saimetadatatypes.h","saimetadatalogger.h", "saimetadatautils.h", "saiserialize.h"],
)

perl_library(
  name = "perl_lib",
  srcs = [
    "utils.pm",
    "xmlutils.pm",
    "style.pm",
    "cap.pm",
    "serialize.pm",
    "test.pm",
  ],
)

perl_binary(
  name = "parse",
  main = "parse.pl",
  srcs = [
    "parse.pl",
  ],
  deps = [
    ":perl_lib",
    "@rules_perl//perl/runfiles",
  ],
  env = {
    "RUNNING_UNDER_BAZEL": "true",
  },
  data = [
    # $(XMLDEPS)
    ":doxygen",
    # $(CONSTHEADERS)
    ":constheaders",
    # $(EXTRA)
    ":extra",
    # $(DEPS)
    ":deps",
  ],
)

run_binary(
  name = "run_parse",
  tool = ":parse",
  outs = [
    ":saimetadatatest.c",
    ":saimetadata.c",
    ":saimetadata.h",
    ":saiswig.i",
  ],
  env = {
    "OUTFILEMARKER": "$(execpath :saimetadatatest.c)",
  },
)
